--- a/waypoint_manager_utils/package.xml
+++ b/waypoint_manager_utils/package.xml
@@ -3,11 +3,11 @@
 <package format="3">
   <name>waypoint_manager_utils</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="kazulab10969@outlook.jp">kazuma</maintainer>
-  <license>TODO: License declaration</license>
+  <description>waypoint_manager_utils</description>
+  <maintainer email="kazulab10969@outlook.jp">Kazuma Yagi</maintainer>
+  <license>Apache License 2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
