--- a/waypoint_server_msgs/package.xml
+++ b/waypoint_server_msgs/package.xml
@@ -3,14 +3,18 @@
 <package format="3">
   <name>waypoint_server_msgs</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="kazulab10969@outlook.jp">kazuma</maintainer>
-  <license>TODO: License declaration</license>
+  <description>waypoint_server_msgs</description>
+  <maintainer email="kazulab10969@outlook.jp">Kazuma Yagi</maintainer>
+  <license>Apache License 2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
+
+  <build_depend>rosidl_default_generators</build_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
     <build_type>ament_cmake</build_type>
