--- a/waypoint_visualizer/package.xml
+++ b/waypoint_visualizer/package.xml
@@ -3,11 +3,19 @@
 <package format="3">
   <name>waypoint_visualizer</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="kazulab10969@outlook.jp">kazuma</maintainer>
-  <license>TODO: License declaration</license>
+  <description>waypoint_visualizer</description>
+  <maintainer email="kazulab10969@outlook.jp">Kazuma Yagi</maintainer>
+  <license>Apache-2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
+   
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>std_msgs</depend>
+  <depend>visualization_msgs</depend>   
+  <depend>waypoint_manager_utils</depend>
+
+  <exec_depend>launch_ros</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
