waypoint_visualizerの起動を追加

--- a/waypoint_manager/config/config_waypoint_manager.yaml
+++ b/waypoint_manager/config/config_waypoint_manager.yaml
@@ -3,3 +3,7 @@ waypoint_navigator_node:
     start_waypoint_id: 0
     loop_enable: true
     loop_count: 2
+
+waypoint_visualizer_node:
+  ros__parameters:
+    visualization_frame_id: "map"
