--- a/waypoint_server_msgs/package.xml
+++ b/waypoint_server_msgs/package.xml
@@ -10,7 +10,12 @@
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <build_depend>rosidl_default_generators</build_depend>
+  
+  <build_depend>builtin_interfaces</build_depend>
 
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <exec_depend>builtin_interfaces</exec_depend>
+  
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
