--- a/waypoint_server_msgs/CMakeLists.txt
+++ b/waypoint_server_msgs/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(ament_cmake_auto REQUIRED)
 ament_auto_find_build_dependencies()
 
 rosidl_generate_interfaces(${PROJECT_NAME}
-  "srv/Command.srv"
+  "srv/ServerInfo.srv"
 )
 
 if(BUILD_TESTING)
