--- a/waypoint_navigator/package.xml
+++ b/waypoint_navigator/package.xml
@@ -17,7 +17,7 @@
   <depend>geometry_msgs</depend>
   <depend>waypoint_manager_utils</depend>
   <depend>example_interfaces</depend>
-  <depend>waypoint_server_msgs</depend>
+  <depend>waypoint_event_msgs</depend>
 
   <exec_depend>launch_ros</exec_depend>
 
