--- a/waypoint_function_server/waypoint_funtion_server/CMakeLists.txt
+++ b/waypoint_function_server/waypoint_funtion_server/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(waypoint_function_main_server)
+project(waypoint_function_server)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -8,23 +8,6 @@ endif()
 find_package(ament_cmake_auto REQUIRED)
 ament_auto_find_build_dependencies()
 
-ament_auto_add_library(${PROJECT_NAME} SHARED
-  src/host_server.cpp
-  src/wait_server.cpp
-)
-
-rclcpp_components_register_node(${PROJECT_NAME}
-  PLUGIN "waypoint_function::HostServer"
-  EXECUTABLE host_server
-)
-
-rclcpp_components_register_node(${PROJECT_NAME}
-  PLUGIN "waypoint_function::WaitServer"
-  EXECUTABLE wait_server
-)
-
-target_link_libraries(${PROJECT_NAME})
-
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
@@ -32,6 +15,8 @@ endif()
 
 ament_auto_package(
   INSTALL_TO_SHARE
+  config
+  launch
 )
 
 install(FILES DESTINATION share/${PROJECT_NAME})
