--- a/waypoint_function_server/waypoint_function_server/package.xml
+++ b/waypoint_function_server/waypoint_function_server/package.xml
@@ -12,6 +12,7 @@
   <depend>waypoint_function_host_server</depend>
 
   <depend>waypoint_function_wait_server</depend>
+  <depend>waypoint_function_test_server</depend>
   <depend>waypoint_function_server_template</depend>
 
   <exec_depend>launch_ros</exec_depend>
