--- a/waypoint_function_server/waypoint_function_test_server/package.xml
+++ b/waypoint_function_server/waypoint_function_test_server/package.xml
@@ -13,8 +13,9 @@
   <depend>rclcpp_components</depend>
   <depend>rclcpp_action</depend>
   <depend>example_interfaces</depend>
+  <depend>std_msgs</depend>
   <depend>waypoint_function_msgs</depend>
-  <depend>waypoint_function_server_template</depend>
+  <!-- <depend>waypoint_function_server_template</depend> -->
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
