--- a/waypoint_function_server/waypoint_function_server/CMakeLists.txt
+++ b/waypoint_function_server/waypoint_function_server/CMakeLists.txt
@@ -8,6 +8,10 @@ endif()
 find_package(ament_cmake_auto REQUIRED)
 ament_auto_find_build_dependencies()
 
+ament_auto_add_library(${PROJECT_NAME} SHARED
+  src/function_server_node.cpp
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
