--- a/waypoint_function_server/waypoint_function_test_server/CMakeLists.txt
+++ b/waypoint_function_server/waypoint_function_test_server/CMakeLists.txt
@@ -13,7 +13,7 @@ ament_auto_add_library(${PROJECT_NAME} SHARED
 )
 
 rclcpp_components_register_node(${PROJECT_NAME}
-  PLUGIN "TestNode"
+  PLUGIN "TestServer"
   EXECUTABLE test_server
 )
 
