waypoint_function_serverの再構築完了。megarover_sampleで検証済。 変更内容 ・host_serverの実装をhost_serverパッケージからfunction_serverパッケージに変更 ・ベースクラスFunctionServerNodeをfunction_serverパッケージに追加 ・WaitServerをクラス継承による実装に変更 ・ServerTempleteを削除しServerExampleを追加、TestServerを実装

--- a/waypoint_function_server/waypoint_function_server/package.xml
+++ b/waypoint_function_server/waypoint_function_server/package.xml
@@ -9,6 +9,12 @@
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>rclcpp_action</depend>
+  <depend>example_interfaces</depend>
+  <depend>waypoint_function_msgs</depend>
+  
   <exec_depend>launch_ros</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
