--- a/waypoint_function_server/waypoint_function_server/CMakeLists.txt
+++ b/waypoint_function_server/waypoint_function_server/CMakeLists.txt
@@ -9,7 +9,13 @@ find_package(ament_cmake_auto REQUIRED)
 ament_auto_find_build_dependencies()
 
 ament_auto_add_library(${PROJECT_NAME} SHARED
+  src/host_server.cpp
   src/function_server_node.cpp
+)
+
+rclcpp_components_register_node(${PROJECT_NAME}
+  PLUGIN "waypoint_function::HostServer"
+  EXECUTABLE host_server
 )
 
 if(BUILD_TESTING)
