--- a/waypoint_function_server/waypoint_function_server_example/CMakeLists.txt
+++ b/waypoint_function_server/waypoint_function_server_example/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(waypoint_function_server_template)
+project(waypoint_function_server_example)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -9,18 +9,12 @@ find_package(ament_cmake_auto REQUIRED)
 ament_auto_find_build_dependencies()
 
 ament_auto_add_library(${PROJECT_NAME} SHARED
-  src/sync_template_server.cpp
-  src/async_template_server.cpp
+  src/test_server.cpp
 )
 
 rclcpp_components_register_node(${PROJECT_NAME}
-  PLUGIN "waypoint_function::SyncTemplateServer"
-  EXECUTABLE sync_template_server
-)
-
-rclcpp_components_register_node(${PROJECT_NAME}
-  PLUGIN "waypoint_function::AsyncTemplateServer"
-  EXECUTABLE async_template_server
+  PLUGIN "waypoint_function::TestServer"
+  EXECUTABLE test_server
 )
 
 target_link_libraries(${PROJECT_NAME})
