--- a/waypoint_function_server/waypoint_function_wait_server/package.xml
+++ b/waypoint_function_server/waypoint_function_wait_server/package.xml
@@ -8,12 +8,8 @@
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <depend>rclcpp</depend>
-  <depend>rclcpp_components</depend>
-  <depend>rclcpp_action</depend>
-  <depend>example_interfaces</depend>
-  <depend>waypoint_function_msgs</depend>
+  
+  <depend>waypoint_function_server</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
