--- a/waypoint_function_server/waypoint_function_wait_server/CMakeLists.txt
+++ b/waypoint_function_server/waypoint_function_wait_server/CMakeLists.txt
@@ -10,11 +10,17 @@ ament_auto_find_build_dependencies()
 
 ament_auto_add_library(${PROJECT_NAME} SHARED
   src/wait_server.cpp
+  src/key_wait_server.cpp
 )
 
 rclcpp_components_register_node(${PROJECT_NAME}
   PLUGIN "waypoint_function::WaitServer"
   EXECUTABLE wait_server
+)
+
+rclcpp_components_register_node(${PROJECT_NAME}
+  PLUGIN "waypoint_function::KeyWaitServer"
+  EXECUTABLE key_wait_server
 )
 
 target_link_libraries(${PROJECT_NAME})
