--- a/waypoint_function_server/waypoint_function_wait_server/package.xml
+++ b/waypoint_function_server/waypoint_function_wait_server/package.xml
@@ -11,7 +11,7 @@
   <buildtool_depend>ncurses</buildtool_depend>
   
   <depend>waypoint_function_server</depend>
-  <depend>example_interfaces</depend>
+  <depend>std_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
