Waypoint Markerを追加するところまで実装完了。 マウス操作で位置と向きを操作可能。また、メニューで削除可能

--- a/waypoint_rviz_plugins/CMakeLists.txt
+++ b/waypoint_rviz_plugins/CMakeLists.txt
@@ -6,11 +6,14 @@ find_package(rclcpp REQUIRED)
 find_package(rviz_common REQUIRED)
 find_package(pluginlib REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(interactive_markers REQUIRED)
+find_package(visualization_msgs REQUIRED)
 
 find_package(Qt5 REQUIRED COMPONENTS Core Widgets)
 
 set(waypoint_rviz_plugins_headers
   include/waypoint_rviz_plugins/pause_end_tool.hpp
+  include/waypoint_rviz_plugins/waypoint_marker_tool.hpp
 )
 qt5_wrap_cpp(waypoint_rviz_plugins_moc
   ${waypoint_rviz_plugins_headers}
@@ -23,6 +26,7 @@ set(CMAKE_AUTORCC ON)
 
 add_library(${PROJECT_NAME} SHARED
   src/pause_end_tool.cpp
+  src/waypoint_marker_tool.cpp
   ${waypoint_rviz_plugins_moc}
 )
 
@@ -41,6 +45,8 @@ ament_target_dependencies(${PROJECT_NAME}
   rviz_common
   pluginlib
   std_msgs
+  interactive_markers
+  visualization_msgs
 )
 
 pluginlib_export_plugin_description_file(rviz_common plugin_description.xml)
@@ -72,5 +78,7 @@ ament_export_dependencies(
   rviz_common
   pluginlib
   std_msgs
+  interactive_markers
+  visualization_msgs
 )
 ament_package()
