--- a/waypoint_rviz_plugins/package.xml
+++ b/waypoint_rviz_plugins/package.xml
@@ -15,8 +15,10 @@
   <build_depend>qtbase5-dev</build_depend>
   <build_depend>rclcpp</build_depend>
   <build_depend>rviz_common</build_depend>
+  <build_depend>interactive_markers</build_depend>
 
   <build_depend>std_msgs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
 
   <exec_depend>rviz2</exec_depend>
   <exec_depend>pluginlib</exec_depend>
