--- a/waypoint_rviz_plugins/package.xml
+++ b/waypoint_rviz_plugins/package.xml
@@ -16,6 +16,7 @@
   <build_depend>rclcpp</build_depend>
   <build_depend>rviz_common</build_depend>
   <build_depend>interactive_markers</build_depend>
+  <build_depend>std_srvs</build_depend>
 
   <build_depend>std_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
