--- a/waypoint_rviz_plugins/package.xml
+++ b/waypoint_rviz_plugins/package.xml
@@ -17,6 +17,7 @@
   <build_depend>rviz_common</build_depend>
   <build_depend>interactive_markers</build_depend>
   <build_depend>std_srvs</build_depend>
+  <build_depend>nav2_msgs</build_depend>
 
   <build_depend>std_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
@@ -25,6 +26,8 @@
   <exec_depend>pluginlib</exec_depend>
 
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>std_srv</exec_depend>
+  <exec_depend>nav2_srv</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
