--- a/waypoint_rviz_plugins/package.xml
+++ b/waypoint_rviz_plugins/package.xml
@@ -15,6 +15,7 @@
   <build_depend>qtbase5-dev</build_depend>
   <build_depend>rclcpp</build_depend>
   <build_depend>rviz_common</build_depend>
+  <build_depend>rviz_default_plugins</build_depend>
   <build_depend>interactive_markers</build_depend>
   <build_depend>std_srvs</build_depend>
   <build_depend>nav2_msgs</build_depend>
