--- a/waypoint_function_server/waypoint_function_server/package.xml
+++ b/waypoint_function_server/waypoint_function_server/package.xml
@@ -12,7 +12,7 @@
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>rclcpp_action</depend>
-  <depend>example_interfaces</depend>
+  <depend>std_msgs</depend>
   <depend>waypoint_function_msgs</depend>
   
   <exec_depend>launch_ros</exec_depend>
