--- a/waypoint_function_server/waypoint_function_server/config/config_waypoint_function_server.yaml
+++ b/waypoint_function_server/waypoint_function_server/config/config_waypoint_function_server.yaml
@@ -1,9 +1,4 @@
-waypoint_navigator_node:
+skip_server_node:
   ros__parameters:
-    start_waypoint_id: 0
-    loop_enable: true
-    loop_count: 2
-
-waypoint_visualizer_node:
-  ros__parameters:
-    visualization_frame_id: "map"
+    dist_tolerance: 3.0
+    scan_tolerance: 10
