--- a/waypoint_function_server/waypoint_function_example_server/package.xml
+++ b/waypoint_function_server/waypoint_function_example_server/package.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>waypoint_function_skip_server</name>
+  <name>waypoint_function_example_server</name>
   <version>0.0.0</version>
-  <description>waypoint_function_skip_server</description>
+  <description>TODO: Package description</description>
   <maintainer email="kazulab10969@outlook.jp">kazuma</maintainer>
-  <license>Apache-2.0</license>
+  <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>ncurses</buildtool_depend>
-  
+
   <depend>waypoint_function_server</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
