--- a/waypoint_manager/config/config_waypoint_manager.yaml
+++ b/waypoint_manager/config/config_waypoint_manager.yaml
@@ -7,3 +7,8 @@ waypoint_navigator_node:
 waypoint_visualizer_node:
   ros__parameters:
     visualization_frame_id: "map"
+
+skip_server_node:
+  ros__parameters:
+    dist_tolerance: 3.0
+    scan_tolerance: 10    
