--- a/waypoint_visualizer/package.xml
+++ b/waypoint_visualizer/package.xml
@@ -14,6 +14,8 @@
   <depend>std_msgs</depend>
   <depend>visualization_msgs</depend>   
   <depend>waypoint_manager_utils</depend>
+  <depend>tf2</depend>
+  <depend>tf2_geometry_msgs</depend>
 
   <exec_depend>launch_ros</exec_depend>
 
